--- a/vueapp/package.json
+++ b/vueapp/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "express": "^4.16.4",
     "vue": "^2.5.11",
+    "vue-resource": "^1.5.1",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1"
   },
