--- a/vueapp/package.json
+++ b/vueapp/package.json
@@ -7,8 +7,16 @@
   "private": true,
   "scripts": {
     "dev": "cross-env NODE_ENV=development webpack-dev-server --open --hot --host 192.168.123.88",
-    "build": "cross-env NODE_ENV=production webpack --progress --hide-modules"
+    "build": "cross-env NODE_ENV=production webpack --progress --hide-modules",
+    "start": "cross-env NODE_ENV=production webpack --progress --hite-modules node server.js"
   },
+  "keyword": [
+    "Segelfliegen",
+    "Segelflug",
+    "JSM",
+    "Dittingen",
+    "LSPD"
+  ],
   "dependencies": {
     "express": "^4.16.4",
     "vue": "^2.5.11",
@@ -35,5 +43,8 @@
     "vue-template-compiler": "^2.4.4",
     "webpack": "^3.6.0",
     "webpack-dev-server": "^2.9.1"
+  },
+  "engines": {
+    "node": "8.11.1"
   }
 }
