--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "scripts": {
     "dev": "cross-env NODE_ENV=development webpack-dev-server --open --hot --host 192.168.123.88",
     "build": "cross-env NODE_ENV=production webpack --progress --hide-modules",
-    "start": "cross-env NODE_ENV=production webpack --progress --hite-modules node server.js"
+    "start": "node server.js"
   },
   "keyword": [
     "Segelfliegen",
