--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "LSPD"
   ],
   "dependencies": {
+    "dotenv": "^6.1.0",
     "express": "^4.16.4",
     "vue": "^2.5.11",
     "vue-resource": "^1.5.1",
@@ -40,6 +41,7 @@
     "file-loader": "^1.1.4",
     "node-sass": "^4.5.3",
     "sass-loader": "^6.0.6",
+    "serve-static": "^1.13.2",
     "vue-loader": "^13.0.5",
     "vue-template-compiler": "^2.4.4",
     "webpack": "^3.6.0",
