--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "license": "MIT",
   "private": true,
   "scripts": {
-    "dev": "cross-env NODE_ENV=development webpack-dev-server --open --hot --host 192.168.123.88",
+    "dev": "cross-env NODE_ENV=development webpack-dev-server --open --hot",
     "build": "cross-env NODE_ENV=production webpack --progress --hide-modules",
     "start": "node server.js",
     "postinstall": "npm run build"
@@ -19,7 +19,6 @@
     "LSPD"
   ],
   "dependencies": {
-    "dotenv": "^6.1.0",
     "express": "^4.16.4",
     "vue": "^2.5.11",
     "vue-resource": "^1.5.1",
@@ -41,7 +40,6 @@
     "file-loader": "^1.1.4",
     "node-sass": "^4.5.3",
     "sass-loader": "^6.0.6",
-    "serve-static": "^1.13.2",
     "vue-loader": "^13.0.5",
     "vue-template-compiler": "^2.4.4",
     "webpack": "^3.6.0",
